--- a/package.json
+++ b/package.json
@@ -4,7 +4,11 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "mocha ./server/**/*.test.js"
+    "test": "mocha ./server/**/*.test.js",
+    "start": "node server/server.js"
+  },
+  "engines":{
+    "node": "7.4.0"
   },
   "author": "",
   "license": "ISC",
