--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "mocha ./server/**/*.test.js",
     "start": "node server/server.js"
   },
-  "engines":{
+  "engines": {
     "node": "7.4.0"
   },
   "author": "",
@@ -15,6 +15,7 @@
   "dependencies": {
     "body-parser": "^1.16.0",
     "express": "^4.14.0",
+    "lodash": "^4.17.4",
     "mongodb": "^2.2.21",
     "mongoose": "^4.7.7"
   },
